# ipoly

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  env.cmd  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  unix_env.sh  uploader.sh
.github/scripts/: release.py
.github/workflows/: doc.yml  release.yml
docs/: CNAME  conf.py  contributing.md  index.rst  readme.md
docs/_build/doctrees/: environment.pickle  index.doctree  license.doctree  readme.doctree
docs/_build/doctrees/ipoly/: ipoly.LaTeX.doctree  ipoly.communication.doctree  ipoly.doctree  ipoly.file_management.doctree  ipoly.logger.doctree  ipoly.ml.doctree  ipoly.tracebackHandler.doctree
docs/_build/doctrees/source/: ipoly.LaTeX.doctree  ipoly.communication.doctree  ipoly.doctree  ipoly.file_management.doctree  ipoly.logger.doctree  ipoly.ml.doctree  ipoly.scraping.doctree  ipoly.traceback.doctree  ipoly.tracebackHandler.doctree  modules.doctree  readme.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  readme.rst.txt
docs/_build/html/ipoly/: ipoly.LaTeX.html  ipoly.communication.html  ipoly.file_management.html  (+4 more)
docs/_static/: searchtools.js
docs/source/: ipoly.rst
ipoly/: LaTeX.py  __init__.py  communication.py  detect_delimiter.py  email.py  file_management.py  logger.py  ml.py  scraping.py  traceback.py  tracebackHandler.py  visualisation.py
source/: modules.rst
tests/: test_ipoly.py
(+53 files in other folders)
