[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["ipoly"]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "ipoly"
readme = "README.md"
dynamic = ["version", "dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}